tests/baselines/reference/superCallInsideClassDeclaration.errors.txt
superCallInsideClassDeclaration.ts(8,5): error TS2377: Constructors for derived classes must contain a 'super' call.


==== superCallInsideClassDeclaration.ts (1 errors) ====
    class A {
    }
    
    class C {
    }
    
    class B extends A {
        constructor() {
        ~~~~~~~~~~~
!!! error TS2377: Constructors for derived classes must contain a 'super' call.
    
            class D extends C {
                constructor() {
                    super();
                }
            }
        }
    }